--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.0",
     "@types/react": "16.8.25",
     "@types/react-dom": "16.8.5",
+    "@types/yup": "^0.26.22",
     "axios": "^0.19.0",
     "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-config-prettier": "^6.0.0",
