--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/icons-react": "^10.4.1",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
     "@types/react": "16.8.25",
     "@types/react-dom": "16.8.5",
     "@types/yup": "^0.26.22",
     "axios": "^0.19.0",
+    "carbon-components": "^10.4.1",
+    "carbon-components-react": "^7.4.1",
     "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "formik": "^1.5.8",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
