--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@carbon/icons-react": "^10.4.1",
+    "@types/carbon-components-react": "^7.4.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
     "@types/react": "16.8.25",
